# learn_cxx_by_projects

./: README.md
plugin-manager/: CMakeLists.txt  CMakePresets.json  README.md  compile.sh
plugin-manager/example/: example_app.cpp  example_plugin_interface.h  math_plugin.cpp  string_plugin.cpp
plugin-manager/include/plugin_manager/: plugin_interface.h  plugin_loader.h  plugin_metadata.h
plugin-manager/src/: plugin_loader.cpp  plugin_metadata.cpp
plugin-manager/test/: test_plugin_manager.cpp
sgi_allocator/: CMakeLists.txt  README.md
sgi_allocator/benchmarks/: CMakeLists.txt  benchmark_sgi_pmr_allocator.cpp
sgi_allocator/examples/: CMakeLists.txt  example_usage.cpp
sgi_allocator/include/: sgi_pmr_allocator.hpp
sgi_allocator/src/: sgi_pmr_allocator.cpp
sgi_allocator/tests/: CMakeLists.txt  test_sgi_pmr_allocator.cpp
